--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "dependencies": {
-    "dotenv": "^16.0.0",
-    "fs": "^0.0.1-security",
-    "tmi.js": "^1.8.5"
+    "tmi.js": "^1.8.5",
+    "axios": "^1.5.0",
+    "nodemon": "^3.0.1",
+    "cors": "^2.8.5",
+    "mongoose": "^7.2.4",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.0"
   }
 }
